k8s/api-service-2/service-api-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-2
  namespace: reto5
  labels:
    app: api-service-2
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: api-service-2
